[metadata]
name = lf-utils
version = 0.0.1
author = Ryan Singman
author_email = ryanjs@vt.edu
description = Learning Factory Utils, for use by Virginia Tech ISE Department
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CNC-lathe/lf-utils
project_urls = 
    Issue Tracker = https://github.com/CNC-lathe/lf-utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    pyyaml >= 5.4.1

[flake8]
max-line-length = 100
per-file-ignores = __init__.py:F401
